--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h2>블로그 그리드 레이아웃 </h2>
+                    <h3>col-lg-2그리드를 5칸으로 변경하는 </h3>
+                    <pre>
+@media(min-width:1200px) {
+    .blog-style > li[class*="col-lg-2"] {
+        width: 20%;
+    }
+}
+                    </pre>
                 </div>
             </div>            
             <ul class="row blog-styled">
